# cgflow

./: .gitignore  LICENSE  README.md  exclude.txt  pyproject.toml
data/experiments/: README.md
data/scripts/: _a_refine.py  _b1_smi_to_block.py  _b2_save_block_data.py  _b3_create_workflow.py  a_catalog_to_smi.py  a_refine_smi.py  a_stock_to_smi.py  b_create_env.py
experiments/data/scripts/: a_stock_to_smi.py
experiments/scripts/: exp1_litpcba_moo.py  exp3A_sbdd_proxy.py  exp3B_sbdd_unidock.py  exp3C_sbdd_localopt.py  exp3Z_sampling.py  expB_topoA_debug.py
experiments/sweep/: fm_nsteps.yaml  fm_time_scheduling.yaml  localopt-finetune.yaml  localopt.yaml  redock.yaml
scripts/: A1_semlaflow_single_pocket.sh  A_semlaflow_train_ar_plinder.sh  A_semlaflow_train_crossdocked.sh  B_cgflow_debug.py  Z_api_debug.py  _a1_semlaflow_train.py  _a2_semlaflow_eval.py  _a2_semlaflow_evaluate.py
src/cgflow/: base_trainer.py  config.py  scriptutil.py
src/cgflow/algo/: semla_algo.py  unidock_algo.py
src/cgflow/api/: __init__.py  api.py  api_bkup.py  api_new.py  cfg.py
src/cgflow/buildutil/: build_dm.py  build_model.py  build_trainer.py
src/cgflow/data/: datamodules.py  datasets.py
src/cgflow/envs/: env.py  semla_env.py  unidock_env.py
src/cgflow/models/: fm.py
src/cgflow/tasks/: config.py  semla_vina.py  unidock_vina.py  (+1 more)
src/gflownet/: __init__.py  config.py  online_trainer.py  trainer.py
src/rxnflow/: config.py
src/semlaflow/: predict.py  scriptutil.py
tests/: A_synthflow_unidock.py  B_synthflow_autodock.py  C_synthflow_pocket_conditional.py  Z_api_debug.py
(+107 files in other folders)
